--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4.*",
+        "php": ">=5.4.1",
 		"eden/registry": "4.x-dev"
     },
     "autoload": {
