--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.3.1",
 		"eden/core": "4.x-dev",
 		"eden/string": "4.x-dev",
-		"eden/array": "4.x-dev"
+		"eden/array": "4.x-dev",
 		"eden/registry": "4.x-dev"
     },
     "autoload": {
